feat: implement HTTP/File configuration polling and add integration tests for routing, security, and Redis rate limiting (#20)